# sodmt

./: .gitignore  .gitmodules  CONTRIBUTING.md  Gemfile  README.md  README.txt  _config.yml  about.markdown  algorithms.md  index.markdown  installation.markdown  req_design.md  test_gen.md
.github/workflows/: maven.yml
_includes/: header.html
algorithms/: pdf-slides.js
assets/: main.scss
case-study-multimodule/: .dockerignore  Dockerfile.tomcat  docker-compose.yml  log.roo  notes-isa95.txt  pom.xml
case-study-multimodule/persistence/: .classpath  .project  dump_data.sh  log.roo  model.di  model.uml  pom.xml  with-3.2.4.txt
docs/: epsilon-article.markdown
example-isa95/: .dockerignore  .gitignore  Dockerfile.postgres  README.md  set-database-props.sh
example-orders/: README.md  pom.xml
glpsol-tlimits/: four-paths.data  slack_by_weight.model  solve-for-all-data
jade-case-study/: 00-start-all.sh  01-start-main-container.sh  02-start-wsig.sh  03-start-agents.sh  pom.xml  start-agents.sh  start-main-container.sh
lp/: un-solo-nodo-para-repartir.lp  varios-nodos-para-repartir.lp
modelos-valor/: modeloTabaco.xsvg
proyectos-eclipse/: .gitignore
sample-composition/: pom.xml
workspace-infraestructura/: .gitignore
workspace-metamodelos/: .gitignore
workspace-metamodels/: .gitignore  bump-version.sh  pom.xml  upload-site.sh
workspace-models/: .gitignore
worst-case-tests/c++/: CMakeLists.txt  constraints.cpp  counts-0.50.txt  counts-0.75.txt  counts-1.25.txt  counts-1.50.txt  main.cpp  worst_case_tests.cpp  worst_case_tests.hpp
(+4198 files in other folders)
