CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(worst_case_tests CXX)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
SET(SRC constraints.cpp worst_case_tests.cpp)

FIND_PACKAGE(GMPxx REQUIRED)
INCLUDE_DIRECTORIES(${GMPXX_INCLUDE_DIR})
SET(LIBS ${LIBS} ${GMPXX_LIBRARY})

ADD_EXECUTABLE(worst_case_tests main.cpp ${SRC})
TARGET_LINK_LIBRARIES(worst_case_tests ${LIBS})
